<resources>
    <string name="app_name">IT Quiz✍</string>
    <string name="quiz_name">IT Quiz✍|Begin Quiz</string>
    <string name="profile_name">IT Quiz✍|Profile</string>
    <string name="app_name_quote">Life is not a multiple choice test, it is an open-book essay exam.</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="high_score">High Score</string>
    <string name="settings">Settings</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="ready">Are you ready?</string>
    <string name="begin">Begin</string>
</resources>