<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="348dp">

        <TextView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bannerDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name_quote"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20sp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <Button
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20sp"
            android:text="@string/reset_password"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>